# coa-mapper-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/coa_mapper_mcp/: __init__.py  mapper.py  models.py  server.py
src/coa_mapper_mcp/data/: freshbooks.json  gaap_reference.json  quickbooks.json  sage.json  wave.json  xero.json
tests/: conftest.py  test_mapper.py  test_server.py
